# HTensor

./: BSDLicense.md  HTensor.cabal  LICENSE  README.md  stack.yaml
app/: IrisMain.hs  Main.hs  MnistMain.hs
src/: Constants.hs  DTensor.hs  DepShape.hs  Digits.hs  Iris.hs  IrisGrenade.hs  Lib.hs  Processing.hs  SingPractice.hs
