name:                HTensor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HTensor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Constants
                     , Iris
                     , Processing
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cassava
                     , random-shuffle
                     , tensorflow
                     , tensorflow-ops
                     , tensorflow-core-ops
                     , tensorflow-logging
                     , text
                     , vector
                     , proto-lens
  default-language:    Haskell2010

executable HTensor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HTensor
  default-language:    Haskell2010

executable run-iris
  hs-source-dirs:      app
  main-is:             IrisMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HTensor
  default-language:    Haskell2010

test-suite HTensor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HTensor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HTensor
